--- a/style.css
+++ b/style.css
@@ -88,3 +88,45 @@ body {
 footer {
   margin-top: 5rem;
 }
+
+@media (min-width: 1340px) {
+  .main-text-container {
+    width: 40%;
+    margin: auto;
+  }
+
+  .main-text {
+    font-size: 2.3rem;
+  }
+
+  .cards-container {
+    display: flex;
+    justify-content: space-evenly;
+    flex-flow: wrap;
+    align-items: center;
+    width: 100%;
+    height: 80vh;
+    padding: 2rem;
+  }
+
+  .card {
+    width: 30%;
+    height: 30vh;
+    margin-bottom: 0;
+  }
+
+  #supervisor,
+  #calculator {
+    align-self: center;
+  }
+
+  #team-builder {
+    align-self: flex-start;
+  }
+
+  #karma {
+    order: 4;
+    align-self: flex-start;
+    margin-top: -70px;
+  }
+}
